--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^4.1.17",
+    "nuka-carousel": "^4.7.9",
     "photoswipe": "^4.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
