--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-photoswipe-gallery": "^1.3.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1",
-    "zenscroll": "^4.0.2"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
