--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
-    "react-loader-spinner": "^4.0.0",
     "react-photoswipe-gallery": "^1.3.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-snowfall": "^1.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
